--- a/index.html
+++ b/index.html
@@ -27,30 +27,69 @@
 
       <div class="main">
         <div class="d-grid gap-2">
-          <button class="btn btn-primary" type="button">Instagram</button>
-          <button class="btn btn-primary" type="button">Facebook</button>
-          <button class="btn btn-primary" type="button">Privat24</button>
-          <button class="btn btn-primary" type="button">Mono</button>
-          <button class="btn btn-primary" type="button">Viber</button>
+          <button
+            onclick="window.location.href = 'https://www.instagram.com/dobro_kney_ua/'"
+            class="btn btn-warning"
+            type="button"
+          >
+            Instagram
+          </button>
+			 <button
+            onclick="window.location.href = 'https://www.instagram.com/dobro_kney_ua/'"
+            class="btn btn-warning"
+            type="button"
+          >
+			 	Privat24
+          </button>
+			 <button
+            onclick="window.location.href = 'https://www.instagram.com/dobro_kney_ua/'"
+            class="btn btn-warning"
+            type="button"
+          >
+            Viber web
+          </button>
+			 <button
+            onclick="window.location.href = 'https://www.instagram.com/dobro_kney_ua/'"
+            class="btn btn-warning"
+            type="button"
+          >
+            Viber mobile
+          </button>
         </div>
 
         <div class="desc">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, nam
-          molestiae? Voluptates, natus dolorum facilis temporibus ex laborum,
-          vel omnis necessitatibus soluta voluptatem reprehenderit, ipsum odit
-          blanditiis? Maiores architecto suscipit ipsa omnis. Vitae suscipit
-          quis laudantium, distinctio quia veritatis magni molestias eligendi
-          esse minus in eos alias obcaecati beatae sequi aperiam dolor odio quas
-          magnam quos impedit atque eveniet! Enim libero itaque quaerat
-          repudiandae nulla perferendis cum saepe. Temporibus rem qui impedit
-          laboriosam perferendis, ab labore, aliquam odit quia nemo quam
-          reprehenderit beatae perspiciatis repellendus quisquam totam aperiam
-          nobis eum ad, repudiandae optio doloribus ex rerum autem. Explicabo,
-          tempore illo?
-        </div>
+			<div class="head">
+				Отримувач платежу
+			 	АНОХІН ДМИТРО ЛЕОНІДОВИЧ
+			</div>
+			<div class="main">
+				<div>
+					IBAN:
+					UA673052990000026205872965450	
+				</div>
+				<div>
+					Рахунок отримувача:
+					26205872965450
+				</div>
+				<div>
+					Валюта картки:
+					UAH	
+				</div>
+				<div>
+					РНОКПП отримувача:
+					3746211234
+				</div>
+			</div>
+			<div class="foot">
+				Призначення платежу:
+				Поповнення рахунку АНОХІН ДМИТРО ЛЕОНІДОВИЧ
+			</div>	
+		 </div>
       </div>
 
-      <div class="footer"><div>By 2022 @</div></div>
+      <div class="footer">
+			<pre>By 2022 @<br>Contact: <a class="number" type="number" href="tel:+380987250797">380987250797</a> </pre>
+		</div>
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
