--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="./style.css" />
-    <title>Details</title>
+    <title>Dobro KNEY details</title>
   </head>
   <body>
     <div class="container">
@@ -56,7 +56,7 @@
             Viber mobile
           </button>
         </div>
-
+		  <a href="viber://chat?number=%2B380684432401">Написать в Вайбер</a>
         <div class="desc">
 			<div class="head">
 				Отримувач платежу
