--- a/index.html
+++ b/index.html
@@ -34,62 +34,52 @@
           >
             Instagram
           </button>
-			 <button
-            onclick="window.location.href = 'https://www.instagram.com/dobro_kney_ua/'"
+          <button
+            onclick="window.location.href = 'https://www.privat24.ua/rd/transfer_to_card/?hash=rd%2Ftransfer_to_card%2F%7B%22from%22%3A%22%22%2C%22to%22%3A%225168755437433648%22%2C%22amt%22%3A%22100%22%2C%22ccy%22%3A%22UAH%22%7D'"
             class="btn btn-warning"
             type="button"
           >
-			 	Privat24
+            Privat24
           </button>
-			 <button
-            onclick="window.location.href = 'https://www.instagram.com/dobro_kney_ua/'"
+          <button
+            onclick="window.location.href = 'viber://chat?number=%2B380987250797'"
             class="btn btn-warning"
             type="button"
           >
-            Viber web
+            Viber desktop
           </button>
-			 <button
-            onclick="window.location.href = 'https://www.instagram.com/dobro_kney_ua/'"
+          <button
+            onclick="window.location.href = 'viber://chat?number=%2B380987250797'"
             class="btn btn-warning"
             type="button"
           >
             Viber mobile
           </button>
         </div>
-		  <a href="viber://chat?number=%2B380684432401">Написать в Вайбер</a>
         <div class="desc">
-			<div class="head">
-				Отримувач платежу
-			 	АНОХІН ДМИТРО ЛЕОНІДОВИЧ
-			</div>
-			<div class="main">
-				<div>
-					IBAN:
-					UA673052990000026205872965450	
-				</div>
-				<div>
-					Рахунок отримувача:
-					26205872965450
-				</div>
-				<div>
-					Валюта картки:
-					UAH	
-				</div>
-				<div>
-					РНОКПП отримувача:
-					3746211234
-				</div>
-			</div>
-			<div class="foot">
-				Призначення платежу:
-				Поповнення рахунку АНОХІН ДМИТРО ЛЕОНІДОВИЧ
-			</div>	
-		 </div>
+          <div>
+            <div class="head">
+              <div>Інформація про реквізити</div>
+              Отримувач платежу АНОХІН ДМИТРО ЛЕОНІДОВИЧ
+            </div>
+            <div class="main">
+              <div>IBAN: UA673052990000026205872965450</div>
+              <div>Рахунок отримувача: 26205872965450</div>
+              <div>Валюта картки: UAH</div>
+              <div>РНОКПП отримувача: 3746211234</div>
+            </div>
+            <div class="foot">
+              Призначення платежу:
+              <br />
+              Поповнення рахунку АНОХІН ДМИТРО ЛЕОНІДОВИЧ
+            </div>
+          </div>
+        </div>
       </div>
 
       <div class="footer">
-			<pre>By 2022 @<br>Contact: <a class="number" type="number" href="tel:+380987250797">380987250797</a> </pre>
-		</div>
+        <pre>Dobro<br>Contact: <a class="number" type="number" href="tel:+380987250797">+(380)98-725-0797</a><br><a class="number" href="https://kneu.edu.ua/">Kyiv National Economic University</a> &copy 2022</pre>
+      </div>
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
