--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             Instagram
           </button>
           <button
-            onclick="window.location.href = 'https://www.privat24.ua/rd/transfer_to_card/?hash=rd%2Ftransfer_to_card%2F%7B%22from%22%3A%22%22%2C%22to%22%3A%225168755437433648%22%2C%22amt%22%3A%22100%22%2C%22ccy%22%3A%22UAH%22%7D'"
+            onclick="window.location.href = 'https://www.privat24.ua/rd/transfer_to_card/?hash=rd%2Ftransfer_to_card%2F%7B%22from%22%3A%22%22%2C%22to%22%3A%225168755907275925%22%2C%22amt%22%3A%22100%22%2C%22ccy%22%3A%22UAH%22%7D'"
             class="btn btn-warning"
             type="button"
           >
@@ -59,19 +59,20 @@
         <div class="desc">
           <div>
             <div class="head">
-              <div>Інформація про реквізити</div>
-              Отримувач платежу АНОХІН ДМИТРО ЛЕОНІДОВИЧ
+              <div><b>Інформація про реквізити</b></div>
+              <b>Отримувач платежу:</b>
+				  ПРИТУЛА КАРИНА СЕРГІЇВНА
             </div>
             <div class="main">
-              <div>IBAN: UA673052990000026205872965450</div>
-              <div>Рахунок отримувача: 26205872965450</div>
-              <div>Валюта картки: UAH</div>
-              <div>РНОКПП отримувача: 3746211234</div>
+              <div><b>IBAN:</b> UA443052990000026202884559697</div>
+              <div><b>Рахунок отримувача:</b> 26202884559697</div>
+              <div><b>Валюта картки:</b> UAH</div>
+              <div><b>РНОКПП отримувача:</b> 3824510401</div>
             </div>
             <div class="foot">
-              Призначення платежу:
+              <b>Призначення платежу:</b>
               <br />
-              Поповнення рахунку АНОХІН ДМИТРО ЛЕОНІДОВИЧ
+              Поповнення рахунку ПРИТУЛА КАРИНА СЕРГІЇВНА
             </div>
           </div>
         </div>
