--- a/index.html
+++ b/index.html
@@ -70,9 +70,7 @@
               <div><b>РНОКПП отримувача:</b> 3824510401</div>
             </div>
             <div class="foot">
-              <b>Призначення платежу:</b>
-              <br />
-              Поповнення рахунку ПРИТУЛА КАРИНА СЕРГІЇВНА
+              <b>Призначення платежу:</b> ПРИТУЛА КАРИНА СЕРГІЇВНА
             </div>
           </div>
         </div>
