--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
               <div><b>РНОКПП отримувача:</b> 3824510401</div>
             </div>
             <div class="foot">
-              <b>Призначення платежу:</b> ПРИТУЛА КАРИНА СЕРГІЇВНА
+              <b>Призначення платежу:</b> для дітей
             </div>
           </div>
         </div>
