--- a/index.html
+++ b/index.html
@@ -70,8 +70,9 @@
               <div><b>РНОКПП отримувача:</b> 3824510401</div>
             </div>
             <div class="foot">
-              <b>Призначення платежу:</b> для дітей
+              <b>Призначення платежу:</b> ПРИТУЛА КАРИНА СЕРГІЇВНА
             </div>
+				<div class="for-child">Будь ласка вказуйте в призначення платежу для дітей</div>
           </div>
         </div>
       </div>
