--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <div class="foot">
               <b>Призначення платежу:</b> ПРИТУЛА КАРИНА СЕРГІЇВНА
             </div>
-				<div class="for-child">Будь ласка вказуйте в призначення платежу для дітей</div>
+				<div class="for-child">Будь ласка, вказуйте в призначення платежу 'Для дітей'.</div>
           </div>
         </div>
       </div>
